force-app/main/default/objects/File__c/File__c.object-meta.xml
<CustomObject>
    <label>File</label>
    <nameField>
        <displayFormat>File-{00000}</displayFormat>
        <label>File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>