force-app/main/default/objects/File__c/fields/Layout__c.field-meta.xml
<CustomField>
    <fullName>Layout__c</fullName>
    <label>Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contemporary Floor Plan</fullName>
            </value>
            <value>
                <fullName>Formal Floor Plan</fullName>
            </value>
            <value>
                <fullName>Traditional Floor Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>