force-app/main/default/objects/File__c/fields/News__c.field-meta.xml
<CustomField>
    <fullName>News__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>News</label>
    <referenceTo>News__c</referenceTo>
    <relationshipLabel>Files</relationshipLabel>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>