force-app/main/default/objects/File__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>If you going to create more than 1 file for Layouts of different floors, please provide the order: 1 - for first floor, 2 - for second and so on.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>