force-app/main/default/objects/File__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Preview</fullName>
            </value>
            <value>
                <fullName>Project USP Image</fullName>
            </value>
            <value>
                <fullName>Client Passport Scan</fullName>
            </value>
            <value>
                <fullName>Photos</fullName>
            </value>
            <value>
                <fullName>Schemas/PDFs</fullName>
            </value>
            <value>
                <fullName>News Preview</fullName>
            </value>
            <value>
                <fullName>News Content Photo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Project Cover Image</fullName>
            </value>
            <value>
                <fullName>Project Map Image</fullName>
            </value>
            <value>
                <fullName>Unit Layout Preview</fullName>
            </value>
            <value>
                <fullName>Project Interior Photos</fullName>
            </value>
            <value>
                <fullName>Project Exterior Photos</fullName>
            </value>
            <value>
                <fullName>Sales Offer</fullName>
            </value>
            <value>
                <fullName>Trade License Scan</fullName>
            </value>
            <value>
                <fullName>Floor Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>