force-app/main/default/objects/File__c/validationRules/Users_Cannot_create_redundunt_files.validationRule-meta.xml
<ValidationRule>
    <fullName>Users_Cannot_create_redundunt_files</fullName>
    <active>false</active>
    <errorConditionFormula>(TEXT(Type__c) &lt;&gt;&apos;Client Passport Scan&apos; &amp;&amp; 

$UserRole.Name &lt;&gt;&apos;Admin&apos; )

&amp;&amp; 

(TEXT(Type__c) &lt;&gt;&apos;Client Passport Scan&apos; &amp;&amp; 

$UserRole.Name &lt;&gt;&apos;Inventory_Manager&apos; 
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Only Admin or Inventory Manager can add this type of files</errorMessage>
</ValidationRule>