force-app/main/default/objects/File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Client__c</columns>
    <columns>Project__c</columns>
    <columns>Unit__c</columns>
    <columns>News__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>